# autopub-test

./: CHANGELOG.md  RELEASE.md  pyproject.toml
.github/workflows/: pr.yml  release.yml
src/autopub_test/: __init__.py
