[project]
name = "autopub-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Arminio", email = "patrick.arminio@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.autopub]
plugins = ["autopub.plugins.github", "autopub.plugins.uv"]
